--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "firebase-admin": "^11.1.0",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
