--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
