--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^11.1.0",
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
